# PolySlim

./: CMakeLists.txt  README.md  decimate.cpp  polyslim.py
